adopt to java 1.8